# rounding-errors

./: .gitignore  README.md  output.md  summation.ipynb  summation.py
CGAL-5.4/: mp_float.cpp
convex-hull/: README.md
convex-hull/data/: collinear.points  empty.points  failure_u.points  failure_uprime.points  one.points  slides_example.points  three.points  two.points
convex-hull/src/: CMakeLists.txt  circular_sequence.hpp  graham_scan.hpp  nonrobust_convex_hull.cpp  nonrobust_orientation.hpp  point.hpp  predicates.cpp  predicates.hpp  robust_convex_hull.cpp  robust_orientation.hpp  test_circular_sequence.cpp  test_failures.cpp  test_read_write.cpp
